--- a/app/src/main/res/layout/list_item_work1.xml
+++ b/app/src/main/res/layout/list_item_work1.xml
@@ -7,6 +7,11 @@
         <variable
             name="vmWork1"
             type="com.example.echo_kt.data.ErectBean" />
+
+        <variable
+            name="clickListener"
+            type="android.view.View.OnClickListener" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -19,6 +24,7 @@
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
             android:orientation="vertical"
+            android:onClick="@{clickListener}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
