--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -61,7 +61,7 @@
                 app:srcCompat="@android:mipmap/sym_def_app_icon" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/tv_music"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="48dp"
@@ -70,26 +70,27 @@
                 android:textColor="#ffffff"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/ibtn_play"
+                app:layout_constraintEnd_toStartOf="@+id/btn_play"
                 app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageButton
-                android:id="@+id/ibtn_play"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:id="@+id/btn_play"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_marginEnd="8dp"
                 android:background="#00000000"
+                android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/ibtn_musicList"
+                app:layout_constraintEnd_toStartOf="@+id/btn_musicList"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@android:drawable/ic_media_play"
                 app:imgPlay="@{mainVM.playStatus}"/>
 
             <ImageButton
-                android:id="@+id/ibtn_musicList"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:id="@+id/btn_musicList"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_marginEnd="20dp"
                 android:background="#000000"
                 app:layout_constraintBottom_toBottomOf="parent"
