--- a/app/src/main/res/navigation/nav_graden.xml
+++ b/app/src/main/res/navigation/nav_graden.xml
@@ -19,6 +19,9 @@
         <action
             android:id="@+id/action_mainFragment_to_audioListDialogFragment"
             app:destination="@id/audioListDialogFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_productFragment"
+            app:destination="@id/productFragment" />
     </fragment>
     <fragment
         android:id="@+id/playFragment"
@@ -34,5 +37,11 @@
         android:id="@+id/audioListDialogFragment"
         android:name="com.example.echo_kt.AudioListDialogFragment"
         android:label="fragment_audio_list_dialog_list_dialog"
-        tools:layout="@layout/fragment_audio_list_dialog_list_dialog" />
+        tools:layout="@layout/audio_list_dialog" />
+    <fragment
+        android:id="@+id/productFragment"
+        android:name="com.example.echo_kt.ui.work.ProductFragment"
+        android:label="ProductFragment"
+        app:launchSingleTop="false"
+        tools:layout="@layout/fragment_product"/>
 </navigation>
