--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,7 +23,7 @@
         <item name="colorPrimaryDark">@color/teal_700</item>
         <item name="colorOnSurface">@color/sunflower_black</item>
         <item name="colorAccent">@color/sunflower_white</item>
-        <item name="colorSurface">@color/sunflower_gray_50</item>
+        <item name="colorSurface">@color/black</item>
         <item name="colorSecondary">@color/sunflower_yellow_500</item>
         <item name="android:colorBackground">@color/sunflower_white</item>
     </style>
