--- a/app/src/main/res/layout/audio_list_dialog_item.xml
+++ b/app/src/main/res/layout/audio_list_dialog_item.xml
@@ -14,12 +14,10 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/selectableItemBackground"
         android:paddingLeft="@dimen/list_item_spacing"
         android:paddingTop="@dimen/list_item_spacing_half"
         android:paddingRight="@dimen/list_item_spacing"
         android:paddingBottom="@dimen/list_item_spacing_half"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:orientation="horizontal"
         android:onClick="@{playOnclick}">
 
@@ -29,6 +27,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_weight="1"
+            android:maxEms="6"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:text="@{pvm.name}"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -41,6 +42,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_weight="1"
+            android:ellipsize="end"
+            android:maxEms="5"
+            android:maxLines="1"
             android:text="@{pvm.singer}"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/item_tv_music"
