--- a/app/src/main/res/layout/play_fragment.xml
+++ b/app/src/main/res/layout/play_fragment.xml
@@ -6,7 +6,10 @@
     <data class="PlayFragmentBinding">
         <variable
             name="pvm"
-            type="com.example.echo_kt.ui.main.PlayViewModel" />
+            type="com.example.echo_kt.ui.main.MainViewModel" />
+        <variable
+            name="onClick"
+            type="android.view.View.OnClickListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -17,7 +20,8 @@
 
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imgAlbumPic"
+            urlAlbum="@{pvm.albumPic}"
             android:layout_width="315dp"
             android:layout_height="315dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -28,80 +32,94 @@
             tools:src="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/tvName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:textSize="30sp"
+            android:ellipsize="end"
+            android:maxEms="6"
+            android:maxLines="1"
+            android:text="@{pvm.songName}"
             android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="@+id/imageView2"
-            app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+            app:layout_constraintStart_toStartOf="@+id/imgAlbumPic"
+            app:layout_constraintTop_toBottomOf="@+id/imgAlbumPic" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/tvProgress"
+            android:text="@{pvm.currentDuration}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            app:layout_constraintStart_toStartOf="@+id/textView2"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintStart_toStartOf="@+id/tvName"
+            app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
         <SeekBar
             android:id="@+id/seekBar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
-            app:layout_constraintEnd_toEndOf="@+id/imageView7"
-            app:layout_constraintStart_toStartOf="@+id/imageView8"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            android:max="@{pvm.maxProgress}"
+            android:progress="@{pvm.playProgress}"
+            app:layout_constraintEnd_toEndOf="@+id/imgAudioList"
+            app:layout_constraintStart_toStartOf="@+id/imgListMode"
+            app:layout_constraintTop_toBottomOf="@+id/tvProgress" />
 
         <ImageView
-            android:id="@+id/imageView4"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/selector_play_float_pic"
+            android:id="@+id/imgPlayStart"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:onClick="@{onClick}"
+            android:src="@drawable/selector_play_pic"
+            app:imgPlay="@{pvm.playStatus}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/seekBar" />
 
         <ImageView
-            android:id="@+id/imageView5"
+            android:id="@+id/imgPrevious"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:onClick="@{onClick}"
             android:layout_marginEnd="16dp"
             android:src="@android:drawable/ic_media_previous"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-            app:layout_constraintEnd_toStartOf="@+id/imageView4"
-            app:layout_constraintTop_toTopOf="@+id/imageView4" />
+            app:layout_constraintBottom_toBottomOf="@+id/imgPlayStart"
+            app:layout_constraintEnd_toStartOf="@+id/imgPlayStart"
+            app:layout_constraintTop_toTopOf="@+id/imgPlayStart" />
 
         <ImageView
-            android:id="@+id/imageView6"
+            android:id="@+id/imgNext"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:onClick="@{onClick}"
             android:layout_marginStart="16dp"
             android:src="@android:drawable/ic_media_next"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
-            app:layout_constraintStart_toEndOf="@+id/imageView4"
-            app:layout_constraintTop_toTopOf="@+id/imageView4" />
+            app:layout_constraintBottom_toBottomOf="@+id/imgPlayStart"
+            app:layout_constraintStart_toEndOf="@+id/imgPlayStart"
+            app:layout_constraintTop_toTopOf="@+id/imgPlayStart" />
 
         <ImageView
-            android:id="@+id/imageView7"
+            android:id="@+id/imgAudioList"
             android:layout_width="50dp"
             android:layout_height="50dp"
+            android:onClick="@{onClick}"
             android:layout_marginStart="16dp"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
-            app:layout_constraintStart_toEndOf="@+id/imageView6"
-            app:layout_constraintTop_toTopOf="@+id/imageView6" />
+            app:layout_constraintBottom_toBottomOf="@+id/imgNext"
+            app:layout_constraintStart_toEndOf="@+id/imgNext"
+            app:layout_constraintTop_toTopOf="@+id/imgNext"
+            app:srcCompat="@android:drawable/ic_menu_sort_by_size" />
 
         <ImageView
-            android:id="@+id/imageView8"
+            android:id="@+id/imgListMode"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginEnd="16dp"
-            android:src="@android:drawable/stat_notify_sync_noanim"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-            app:layout_constraintEnd_toStartOf="@+id/imageView5"
-            app:layout_constraintTop_toTopOf="@+id/imageView5" />
+            android:onClick="@{onClick}"
+            url="@{pvm.playModePic}"
+            app:layout_constraintBottom_toBottomOf="@+id/imgPrevious"
+            app:layout_constraintEnd_toStartOf="@+id/imgPrevious"
+            app:layout_constraintTop_toTopOf="@+id/imgPrevious" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
