--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,10 +22,10 @@
         <item name="colorOnPrimary">@color/teal_200</item>
         <item name="colorPrimaryDark">@color/teal_700</item>
         <item name="colorOnSurface">@color/sunflower_black</item>
-        <item name="colorAccent">@color/sunflower_white</item>
-        <item name="colorSurface">@color/black</item>
-        <item name="colorSecondary">@color/sunflower_yellow_500</item>
-        <item name="android:colorBackground">@color/sunflower_white</item>
+        <item name="colorAccent">@color/sunflower_green_500</item>
+        <item name="colorSurface">@color/purple_200</item>
+        <item name="colorSecondary">@color/sunflower_yellow_300</item>
+        <item name="android:colorBackground">@color/white</item>
     </style>
 
     <style name="Theme.Sunflower" parent="Base.Theme.Sunflower"/>
