--- a/app/src/main/res/layout/douban_fragment.xml
+++ b/app/src/main/res/layout/douban_fragment.xml
@@ -1,24 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
-            name="vmHome"
-            type="com.example.echo_kt.ui.main.HomeViewModel" />
+            name="doubanVM"
+            type="com.example.echo_kt.ui.douban.DoubanViewModel" />
+        <variable
+            name="jumpSearch"
+            type="android.view.View.OnClickListener" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.main.HomeFragment">
+        tools:context=".ui.douban.DoubanFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clTitle"
             android:layout_width="match_parent"
             android:layout_height="54dp"
             android:elevation="6dp"
+            android:padding="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -26,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:text="首页"
+                android:text="豆瓣"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -38,18 +43,19 @@
                 android:id="@+id/clSearch"
                 android:layout_width="match_parent"
                 android:layout_height="32dp"
+                android:layout_marginStart="70dp"
+                android:layout_marginEnd="10dp"
                 android:background="@drawable/radius_16_theme"
-                android:layout_marginLeft="70dp"
-                android:layout_marginRight="70dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                android:onClick="@{jumpSearch}">
 
                 <ImageView
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    android:layout_marginLeft="10dp"
+                    android:layout_marginStart="10dp"
                     android:scaleType="center"
                     android:src="@mipmap/search"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -69,16 +75,18 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <ImageButton
-                android:id="@+id/ibtSetting"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginEnd="16dp"
-                android:background="#00000000"
-                android:src="@mipmap/setting"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/mainList_douban"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/clTitle"
+            tools:listitem="@layout/list_item_douban_main"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
