--- a/app/src/main/res/layout/play_fragment.xml
+++ b/app/src/main/res/layout/play_fragment.xml
@@ -54,6 +54,17 @@
             app:layout_constraintStart_toStartOf="@+id/tvName"
             app:layout_constraintTop_toBottomOf="@+id/tvName" />
 
+        <TextView
+            android:id="@+id/tvMaxDuration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@{pvm.maxDuration}"
+            app:layout_constraintBottom_toBottomOf="@+id/tvProgress"
+            app:layout_constraintEnd_toEndOf="@+id/seekBar"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/seekBar"
+            app:layout_constraintTop_toTopOf="@+id/tvProgress" />
+
         <SeekBar
             android:id="@+id/seekBar"
             android:layout_width="0dp"
