--- a/app/src/main/res/navigation/nav_graden.xml
+++ b/app/src/main/res/navigation/nav_graden.xml
@@ -22,6 +22,12 @@
         <action
             android:id="@+id/action_mainFragment_to_productFragment"
             app:destination="@id/productFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_settingsFragment"
+            app:destination="@id/settingsFragment" />
+        <action
+            android:id="@+id/action_mainFragment_to_searchFragment"
+            app:destination="@id/searchFragment" />
     </fragment>
     <fragment
         android:id="@+id/playFragment"
@@ -48,4 +54,14 @@
         android:label="ProductFragment"
         app:launchSingleTop="false"
         tools:layout="@layout/fragment_product"/>
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.example.echo_kt.ui.setting.SettingFragment"
+        android:label="SettingsFragment"
+        tools:layout="@layout/setting_fragment"/>
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.example.echo_kt.ui.SearchFragment"
+        android:label="SearchFragment"
+        tools:layout="@layout/search_fragment"/>
 </navigation>
