--- a/app/src/main/res/drawable/radius_10_hollow.xml
+++ b/app/src/main/res/drawable/radius_10_hollow.xml
@@ -2,12 +2,13 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="10dp" />
+    <solid android:color="@android:color/white"/>
     <stroke
-        android:width="1dp"
-        android:color="@color/sunflower_green_500" />
+        android:width="2dp"
+        android:color="#E880A3" />
     <padding
-        android:bottom="12dp"
-        android:left="12dp"
-        android:right="12dp"
-        android:top="12dp" />
+        android:bottom="4dp"
+        android:left="4dp"
+        android:right="4dp"
+        android:top="4dp" />
 </shape>
