--- a/app/src/main/res/layout/audio_list_dialog.xml
+++ b/app/src/main/res/layout/audio_list_dialog.xml
@@ -37,7 +37,7 @@
                 android:text="@{mainVm.playModeText}"
                 android:textSize="25sp"
                 tools:text="播放模式"
-                android:layout_margin="10dp"
+                android:layout_marginVertical="10dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
