--- a/app/src/main/res/layout/audio_list_dialog_item.xml
+++ b/app/src/main/res/layout/audio_list_dialog_item.xml
@@ -5,9 +5,9 @@
     <data>
         <variable
             name="pvm"
-            type="com.example.echo_kt.ui.main.AudioBean" />
+            type="com.example.echo_kt.data.AudioBean" />
         <variable
-            name="playOnclick"
+            name="onClick"
             type="android.view.View.OnClickListener" />
     </data>
 
@@ -18,20 +18,19 @@
         android:paddingTop="@dimen/list_item_spacing_half"
         android:paddingRight="@dimen/list_item_spacing"
         android:paddingBottom="@dimen/list_item_spacing_half"
-        android:orientation="horizontal"
-        android:onClick="@{playOnclick}">
+        android:onClick="@{onClick}"
+        android:foreground="?android:attr/selectableItemBackgroundBorderless">
 
         <TextView
             android:id="@+id/item_tv_music"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_weight="1"
             android:maxEms="6"
             android:ellipsize="end"
             android:maxLines="1"
             android:text="@{pvm.name}"
-            android:textSize="20sp"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -41,12 +40,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_weight="1"
             android:ellipsize="end"
             android:maxEms="5"
             android:maxLines="1"
             android:text="@{pvm.singer}"
-            android:textSize="18sp"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/item_tv_music"
             app:layout_constraintStart_toEndOf="@+id/item_tv_music"
             app:layout_constraintTop_toTopOf="@+id/item_tv_music"
@@ -57,10 +55,12 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="#00000000"
+            android:src="@mipmap/back"
+            android:onClick="@{onClick}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@android:drawable/btn_dialog" />
+            app:layout_constraintVertical_bias="0.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
