--- a/app/src/main/res/layout/list_item_songlist.xml
+++ b/app/src/main/res/layout/list_item_songlist.xml
@@ -17,13 +17,16 @@
         android:layout_height="wrap_content"
         android:onClick="@{clickListener}"
         android:paddingVertical="5dp"
+        android:elevation="10dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/radius_10_hollow"
         android:paddingHorizontal="10dp">
 
         <ImageView
             android:id="@+id/imageView5"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            url="@{bean.coverImage}"
+            urlAlbum="@{bean.coverImage}"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
