--- a/app/src/main/res/layout/list_item_work1.xml
+++ b/app/src/main/res/layout/list_item_work1.xml
@@ -18,7 +18,9 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:onClick="@{clickListener}"
-        android:elevation="2dp">
+        android:elevation="5dp"
+        android:layout_margin="5dp"
+        android:background="@drawable/radius_10_hollow">
 
         <ImageView
             android:id="@+id/imageView3"
