--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,12 +18,12 @@
 
     <!-- To see how these attributes are used, please visit https://material.io/develop/android/theming/color/ -->
     <style name="Base.Theme.Sunflower" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimary">#B2939E</item>
         <item name="colorOnPrimary">@color/teal_200</item>
-        <item name="colorPrimaryDark">@color/teal_700</item>
+        <item name="colorPrimaryDark">#ED064F</item>
         <item name="colorOnSurface">@color/sunflower_black</item>
         <item name="colorAccent">@color/sunflower_green_500</item>
-        <item name="colorSurface">@color/purple_200</item>
+        <item name="colorSurface">@color/white</item>
         <item name="colorSecondary">@color/sunflower_yellow_300</item>
         <item name="android:colorBackground">@color/white</item>
     </style>
