就剩咪咕了，正在反编译咪咕源码， 因有事，故先停更一段时间

--- a/app/src/main/res/layout/list_item_douban_minor.xml
+++ b/app/src/main/res/layout/list_item_douban_minor.xml
@@ -27,7 +27,8 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:srcCompat="@tools:sample/avatars"
             url="@{doubanMinorVM.imgPath}"
-            android:scaleType="fitXY"/>
+            android:scaleType="fitXY"
+            android:contentDescription="TODO" />
 
         <TextView
             android:id="@+id/textView"
