--- a/app/src/main/res/layout/list_item_work1.xml
+++ b/app/src/main/res/layout/list_item_work1.xml
@@ -31,7 +31,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@mipmap/n1" />
+            tools:srcCompat="@mipmap/n1"
+            android:contentDescription="TODO" />
 
         <TextView
             android:id="@+id/textView4"
