--- a/app/src/main/res/layout/custom_song_list_fragment.xml
+++ b/app/src/main/res/layout/custom_song_list_fragment.xml
@@ -60,7 +60,8 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.7"
-                        tools:src="@tools:sample/avatars" />
+                        tools:src="@tools:sample/avatars"
+                        android:contentDescription="TODO" />
 
                     <TextView
                         android:id="@+id/textView10"
@@ -112,11 +113,11 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_songList"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginTop="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp"
-                    tools:minHeight="500dp"
+                    android:minHeight="500dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_playAll" />
