--- a/app/src/main/res/layout/douban_fragment.xml
+++ b/app/src/main/res/layout/douban_fragment.xml
@@ -59,7 +59,8 @@
                     android:scaleType="center"
                     android:src="@mipmap/search"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="TODO" />
 
                 <TextView
                     android:id="@+id/etSearch"
