--- a/app/src/main/res/layout/fragment_song_list_dialog.xml
+++ b/app/src/main/res/layout/fragment_song_list_dialog.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 <data>
     <variable
@@ -9,93 +8,52 @@
         type="android.view.View.OnClickListener" />
 </data>
 
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:paddingLeft="@dimen/list_item_spacing"
     android:paddingTop="@dimen/list_item_spacing_half"
     android:paddingRight="@dimen/list_item_spacing"
     android:paddingBottom="@dimen/list_item_spacing_half">
 
-    <LinearLayout
-        android:id="@+id/ll_sort"
+    <TextView
+        android:id="@+id/tv_sort"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:drawableStart="@android:drawable/ic_menu_gallery"
         android:gravity="center_vertical"
-        android:paddingVertical="5dp"
         android:onClick="@{onClick}"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:text="@string/toggle_sort" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@android:drawable/ic_menu_gallery" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="@string/toggle_sort" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_add"
+    <TextView
+        android:id="@+id/tv_add"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:drawableStart="@android:drawable/ic_menu_gallery"
         android:gravity="center_vertical"
-        android:paddingVertical="5dp"
         android:onClick="@{onClick}"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_sort">
+        android:text="添加歌曲" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@android:drawable/ic_menu_gallery"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="添加歌曲" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_edit"
+    <TextView
+        android:id="@+id/tv_edit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:drawableStart="@android:drawable/ic_menu_gallery"
         android:gravity="center_vertical"
-        android:paddingVertical="5dp"
         android:onClick="@{onClick}"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_add">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:srcCompat="@android:drawable/ic_menu_gallery"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="编辑歌单" />
-    </LinearLayout>
+        android:text="编辑歌单" />
 
     <Button
         android:id="@+id/btn_cancel"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:backgroundTint="#00000000"
-        android:text="取消"
         android:onClick="@{onClick}"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ll_edit" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:text="取消" />
+</LinearLayout>
 </layout>
