--- a/app/src/main/res/layout/list_item_songlist.xml
+++ b/app/src/main/res/layout/list_item_songlist.xml
@@ -40,7 +40,7 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="8dp"
             android:text="@{bean.name}"
-            tools:text="我喜欢"
+            tools:text="收藏"
             android:textSize="24sp"
             app:layout_constraintStart_toEndOf="@+id/imageView5"
             app:layout_constraintTop_toTopOf="@+id/imageView5" />
