--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,8 +18,8 @@
 
     <!-- To see how these attributes are used, please visit https://material.io/develop/android/theming/color/ -->
     <style name="Base.Theme.Sunflower" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <item name="colorPrimary">#B2939E</item>
-        <item name="colorOnPrimary">@color/teal_200</item>
+        <item name="colorPrimary">#FFFFFF</item>
+        <item name="colorOnPrimary">@color/black</item>
         <item name="colorPrimaryDark">#ED064F</item>
         <item name="colorOnSurface">@color/sunflower_black</item>
         <item name="colorAccent">@color/sunflower_green_500</item>
